@startuml

skinparam classBackgroundColor White
skinparam classBorderColor Black
skinparam arrowColor Black
skinparam stereotypeCBackgroundColor White
skinparam stereotypeIBackgroundColor White

interface Account {
int accountID
double balance
getAccountID()
getBalance()
changeBalance()
}

class CashAccount {
}

class BankAccount {
IBAN iban
}

class SavingsAccount {
BankAccount bankAccount
}

class CreditCardAccount {
BankAccount bankAccount
}

Account <|-- CashAccount
Account <|-- BankAccount
Account <|-- SavingsAccount
Account <|-- CreditCardAccount
BankAccount <-right- SavingsAccount
BankAccount <-left- CreditCardAccount



@enduml